test/errors/type/collections/set/add.yasl
const x = collections.set()

mt.lookup(collections.set(), .add)([], 1)

